--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -141,5 +141,6 @@ pt:
       destroy: "Remover %{model}"
       create: "Adicionar %{model}"
       read: "Visualizar %{model}"
+      back_to: "Voltar para %{model}"
     index:
       list: "Lista de %{model}"
