Add task statuses on table of projects

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -97,6 +97,7 @@ pt:
         end_date: Date de Fim
         status: Status
         colaborators: Colaboradores
+        tasks: Tarefas
       projects/task:
         id: "#"
         title: Título
