Add fixtures to projects

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -98,6 +98,7 @@ pt:
         status: Status
         colaborators: Colaboradores
         tasks: Tarefas
+        fixtures: Funcionalidades
       projects/task:
         id: "#"
         title: Título
